--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <label for="phone">Phone</label>
+      <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)" />
 
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <label for="message">Message</label>
+      <input type="" name="message" id="message" placeholder="Enter Message" />
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
