--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <label for="phone">Phone</label>
+      <label for="phone">Phone Number</label>
       <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)" />
 
       <!-- Add a label for 'message'-->
