Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <textarea name="message" id="message" placeholder="Enter Message" />
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      <input type="checkbox" name="checkbox-1" value=""><br>
+      <input type="checkbox" name="checkbox-1" id="checkbox" value=""><br>
 
 
       <!-- Add an input with the type set to 'submit' -->
