--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <input type="checkbox" name="checkbox-1" id="checkbox" value=""><br>
+      <input type="checkbox" name="checkbox-2" id="checkbox" value=""><br>
 
 
       <!-- Add an input with the type set to 'submit' -->
