Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <textarea name="message" id="message" placeholder="Enter Message" />
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <h3>Do you have any pets?</h3>
       <input type="checkbox" name="checkbox-1" id="checkbox" value="dog">Dog<br>
-      <input type="checkbox" name="checkbox-2" id="checkbox" value="">Cat<br>
+      <input type="checkbox" name="checkbox-2" id="checkbox" value="cat">Cat<br>
 
 
       <!-- Add an input with the type set to 'submit' -->
