--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <label for="fullname" required>Full Name</label>
-      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" />
+      <label for="fullname">Full Name</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required/>
 
       <!-- Add a label for 'email'-->
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <label for="email" required>Email</label>
-      <input type="email" name="email" id="email" placeholder="Enter Email"/>
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" placeholder="Enter Email" required/>
 
       <!-- Add a label for 'phone'-->
 
