Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
       <label for="message">Message</label>
-      <textarea name="message" id="message" placeholder="Enter Message" />
+      <textarea name="message" id="message" placeholder="Enter Message" /></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <h3>Do you have any pets?</h3>
