--- a/index.html
+++ b/index.html
@@ -12,37 +12,44 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
 
-
+    <form>
       <!-- Add a label for 'fullname'-->
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
+      <label for="fullname">Full Name</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required/>
 
       <!-- Add a label for 'email'-->
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" placeholder="Enter Email" required/>
 
       <!-- Add a label for 'phone'-->
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <label for="phone">Phone Number</label>
+      <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)" />
 
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <label for="message">Message</label>
+      <textarea name="message" id="message" placeholder="Enter Message" /></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
+      <h3>Do you have any pets?</h3>
+      <input type="checkbox" name="checkbox-1" id="checkbox" value="dog">Dog<br>
+      <input type="checkbox" name="checkbox-2" id="checkbox" value="cat">Cat<br>
 
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" value="Submit">
 
-    
+    </form>
   </body>
 </html>
